# M88M

./: .gitignore  CMakeLists.txt  GEMINI.md  LICENSE  README.md  a.out  fix_keys.py  fix_sys_tab.py  fix_ui.py  package-lock.json  test_keys.cpp  update_ask.py  update_nfd.py
.github/workflows/: build-freebsd.yml  build-linux.yml  build-macos.yml  build-rpi.yml  build-windows.yml  publish-release-assets.yml
assets/: NOTICE.md  OFL.txt
assets/AppIcon.icon/: icon.json
docs/: CI.md  PORT_PLAN.md  diagram.md
scripts/: build_freebsd.sh  build_freebsd_pkg.sh  build_linux.sh  build_macos.sh  build_win.ps1
src/common/: compat.h  critsect.h  diag.h  draw.h  file.cpp  file.h  guid.cpp  headers.h  loadmon.h  piccolo_stub.h  srcbuf.cpp  srcbuf.h  status.cpp  status.h  types.h
src/devices/: Z80Debug.h  Z80Test.h  Z80c.cpp  opna.cpp  psg.cpp
src/if/: ifcommon.h  ifui.h
src/pc88/: base.cpp  base.h  calender.cpp  config.h  config2.h  crtc.cpp  diskmgr.cpp  diskmgr.h  fdc.cpp  intc.cpp  memory.cpp  mouse.cpp  mouse.h  opnif.cpp  opnif.h  pc88.cpp  pc88.h  pd8257.cpp  pio.cpp  pio.h  screen.cpp  sound.cpp  sound.h  subsys.cpp  tapemgr.cpp
src/raylib/: Info.plist.in  app.cpp  audio_out.cpp  audio_out.h  config.cpp  config.h  core_runner.cpp  core_runner.h  disk_dialog.cpp  disk_dialog.cpp.new  disk_dialog.h  key_input.cpp  key_input.h  m88m.rc  paths.cpp  paths.h  raylib_mouse.cpp  raylib_pad.cpp  screen_view.cpp  screen_view.h
src/win32/: types.h
